@@ -549,6 +549,7 @@ buffered_close(buffered *self, PyObject *args)
         }
         else {
             PyObject *val2;
+            PyErr_NormalizeException(&exc, &val, &tb);
             Py_DECREF(exc);
             Py_XDECREF(tb);
             PyErr_Fetch(&exc, &val2, &tb);
